--- a/nginx.reverse-proxy.conf
+++ b/nginx.reverse-proxy.conf
@@ -1,28 +1,26 @@
-# server {
-#   listen 80;
-#   listen [::]:80;
-#   server_name _;
-#   server_tokens off;
-
-#   location /.well-known/acme-challenge/ {
-#     root /var/www/certbot;
-#   }
-
-#   location / {
-#     return 301 https://$host$request_uri;
-#   }
-# }
+# cspell:ignore fullchain privkey
 server {
   listen 80;
   listen [::]:80;
+  server_name _;
+  server_tokens off;
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+
+  location / {
+    return 301 https://$host$request_uri;
+  }
+}
+
+server {
+  listen 443 ssl;
+  listen [::]:443 ssl;
   server_name "www.web-admin.$STAGE.nitro.ng-omar.com" "web-admin.$STAGE.nitro.ng-omar.com";
 
-  # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  # ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  # ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  # ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  # include /etc/letsencrypt/options-ssl-nginx.conf;
-  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  ssl_certificate /fullchain.pem;
+  ssl_certificate_key /privkey.pem;
 
   location / {
     proxy_pass http://w-admin;
@@ -33,16 +31,12 @@ server {
 }
 
 server {
-  listen 80;
-  listen [::]:80;
+  listen 443 ssl;
+  listen [::]:443 ssl;
   server_name "www.mobile-admin.$STAGE.nitro.ng-omar.com" "mobile-admin.$STAGE.nitro.ng-omar.com";
 
-  # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  # ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  # ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  # ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  # include /etc/letsencrypt/options-ssl-nginx.conf;
-  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  ssl_certificate /fullchain.pem;
+  ssl_certificate_key /privkey.pem;
 
   location / {
     proxy_pass http://m-admin;
@@ -53,16 +47,12 @@ server {
 }
 
 server {
-  listen 80;
-  listen [::]:80;
+  listen 443 ssl;
+  listen [::]:443 ssl;
   server_name "www.api.$STAGE.nitro.ng-omar.com" "api.$STAGE.nitro.ng-omar.com";
 
-  # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  # ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  # ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  # ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  # include /etc/letsencrypt/options-ssl-nginx.conf;
-  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  ssl_certificate /fullchain.pem;
+  ssl_certificate_key /privkey.pem;
 
   location / {
     proxy_pass http://b-api:3000;
