ci(docker): 🔒️ add ssl shell scripts

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -8,7 +8,7 @@ on:
     branches: [develop]
 
 jobs:
-  test:
+  test-and-lint:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,10 +25,15 @@ jobs:
           node-version: '16.10.0'
 
       # Install Dependencies
-      - name: Install dependencies 🔧
+      - name: Install dependencies
         run: |
           npm i -g npm@latest
           npm ci
+
+      # Run Linting
+      - name: Run Lint Check
+        run: |
+          npm run check:lint
 
       # Run Unit Testing
       - name: Run Unit Test
@@ -41,27 +46,6 @@ jobs:
       # Build application
       - name: Run Build
         run: npm run build
-
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      # Get checkout
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      # Install Node js
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.10.0'
-
-      # Run Linting
-      - name: Run Lint Check 🔧
-        run: |
-          npm run check:lint
 
   cspell:
     runs-on: ubuntu-latest
@@ -80,7 +64,7 @@ jobs:
           node-version: '16.10.0'
 
       # Run Spell Check
-      - name: Run Spell Check 🔧
+      - name: Run Spell Check
         run: |
           npm run check:cspell
 
@@ -101,7 +85,7 @@ jobs:
           node-version: '16.10.0'
 
       # Run Format Check
-      - name: Run Format Check 🔧
+      - name: Run Format Check
         run: |
           npm run check:format
 
@@ -122,11 +106,11 @@ jobs:
           node-version: '16.10.0'
 
       # Install Dependencies
-      - name: Install dependencies 🔧 # cspell:ignore postcss
+      - name: Install dependencies # cspell:ignore postcss
         run: |
           npm i postcss stylelint stylelint-config-standard stylelint-config-prettier stylelint-config-standard-scss stylelint-config-prettier-scss stylelint-config-sass-guidelines stylelint-config-idiomatic-order -D
 
       # Run Style Check
-      - name: Run Style Check 🔧
+      - name: Run Style Check
         run: |
           npm run check:style
