ci(github): 💚 improve ci test and lint steps

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -8,7 +8,7 @@ on:
     branches: [develop]
 
 jobs:
-  test:
+  unit-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,6 +33,28 @@ jobs:
       # Run Unit Testing
       - name: Run Unit Test
         run: npm run check:test
+
+  e2e-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # Install Node js
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.10.0'
+
+      # Install Dependencies
+      - name: Install dependencies
+        run: |
+          npm i -g npm@latest
+          npm ci
 
       # Run e2e Testing
       - name: Run e2e Test
