chore(core): 🔧 update some config files

--- a/nginx.reverse-proxy.conf
+++ b/nginx.reverse-proxy.conf
@@ -17,7 +17,7 @@ server {
 server {
   listen 443 ssl;
   listen [::]:443 ssl;
-  server_name "www.web-admin.$STAGE.nitro.ng-omar.com" "web-admin.$STAGE.nitro.ng-omar.com";
+  server_name "web-admin.$STAGE.nitro.ng-omar.com";
 
   ssl_certificate /fullchain.pem;
   ssl_certificate_key /privkey.pem;
@@ -33,7 +33,7 @@ server {
 server {
   listen 443 ssl;
   listen [::]:443 ssl;
-  server_name "www.mobile-admin.$STAGE.nitro.ng-omar.com" "mobile-admin.$STAGE.nitro.ng-omar.com";
+  server_name "mobile-admin.$STAGE.nitro.ng-omar.com";
 
   ssl_certificate /fullchain.pem;
   ssl_certificate_key /privkey.pem;
@@ -49,7 +49,7 @@ server {
 server {
   listen 443 ssl;
   listen [::]:443 ssl;
-  server_name "www.api.$STAGE.nitro.ng-omar.com" "api.$STAGE.nitro.ng-omar.com";
+  server_name "api.$STAGE.nitro.ng-omar.com";
 
   ssl_certificate /fullchain.pem;
   ssl_certificate_key /privkey.pem;
