--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,10 +18,7 @@
             "enforceBuildableLibDependency": true,
             "allow": [],
             "depConstraints": [
-              {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
-              }
+              { "sourceTag": "*", "onlyDependOnLibsWithTags": ["*"] }
             ]
           }
         ],
@@ -39,7 +36,9 @@
         "no-return-assign": "off",
         "class-methods-use-this": "off",
         "no-unused-vars": ["error"],
-        "no-param-reassign": "off"
+        "no-param-reassign": "off",
+        "no-shadow": "off",
+        "no-return-await": "off"
       }
     },
     {
@@ -57,7 +56,8 @@
           { "allowExpressions": true }
         ],
         "@typescript-eslint/no-empty-interface": "off",
-        "@typescript-eslint/no-unused-vars": ["error"]
+        "@typescript-eslint/no-unused-vars": ["error"],
+        "@typescript-eslint/no-shadow": ["error"]
       }
     },
     {
