--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -20,7 +20,6 @@
     "ibm.output-colorizer",
     "ionic.ionic",
     "johnpapa.angular-essentials",
-    "johnpapa.vscode-peacock",
     "johnpapa.winteriscoming",
     "justbrenny.hero-heroku",
     "liviuschera.noctis",
@@ -43,7 +42,6 @@
     "pnp.polacode",
     "pranaygp.vscode-css-peek",
     "quicktype.quicktype",
-    "rangav.vscode-thunder-client",
     "rbbit.typescript-hero",
     "redhat.vscode-yaml",
     "ritwickdey.liveserver",
@@ -52,13 +50,12 @@
     "softwaredotcom.swdc-vscode",
     "streetsidesoftware.code-spell-checker",
     "streetsidesoftware.code-spell-checker-hebrew",
-    "visualstudioexptteam.vscodeintellicode",
     "vivaxy.vscode-conventional-commits",
     "wayou.vscode-todo-highlight",
     "wix.vscode-import-cost",
     "zhuangtongfa.material-theme",
     "zignd.html-css-class-completion",
     "streetsidesoftware.code-spell-checker-arabic",
-    "VisualStudioExptTeam.vscodeintellicode"
+    "firsttris.vscode-jest-runner"
   ]
 }
