--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -9,7 +9,7 @@
   ],
   "rules": {
     "order/properties-alphabetical-order": null,
-    "selector-class-pattern": "^([a-z][a-z0-9]*)(-_[a-z0-9]+)*$",
+    "selector-class-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
     "string-quotes": "single"
   }
 }
