feat(core): new changes updated

--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "npx nx run-many --target=serve --all --parallel=false",
     "build": "npx nx run-many --target=build --all --parallel=false",
+    "cap:add": "cross-env project=$npm_config_project npx cap add",
+    "cap:sync": "cross-env project=$npm_config_project npx cap sync",
+    "cap:open": "cross-env project=$npm_config_project npx cap open",
     "check:e2e": "npx nx run-many --target=e2e --all --parallel=false",
     "check:lint": "npx nx workspace-lint && npx nx run-many --target=lint --all",
     "check:test": "npx nx run-many --target=test --all",
