--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,10 @@
   "plugins": ["@nrwl/nx", "sonarjs"],
   "overrides": [
     {
+      "files": ["*.html"],
+      "extends": ["plugin:prettier/recommended", "eslint:recommended"]
+    },
+    {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "extends": [
         "eslint:recommended",
@@ -59,7 +63,8 @@
         ],
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-unused-vars": ["error"],
-        "@typescript-eslint/no-shadow": ["error"]
+        "@typescript-eslint/no-shadow": ["error"],
+        "@typescript-eslint/no-non-null-assertion": "off"
       }
     },
     {
