--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,6 +10,10 @@
   "rules": {
     "order/properties-alphabetical-order": null,
     "selector-class-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
-    "string-quotes": "single"
+    "string-quotes": "single",
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": [true, { "ignoreAtRules": ["tailwind"] }],
+    "max-nesting-depth": 2,
+    "selector-no-qualifying-type": null
   }
 }
