--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "check:style": "npx stylelint \"{apps,libs}/**/*.{css,less,sass,scss,sss}\"",
     "check:all": "npm-run-all check:test check:e2e check:lint build check:cspell check:format check:style"
   },
+  "prettier": "@js-omar/prettier-config",
   "dependencies": {
     "@angular/animations": "~14.1.0",
     "@angular/common": "~14.1.0",
@@ -91,6 +92,8 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@ionic/angular-toolkit": "^7.0.0",
+    "@js-omar/eslint-config": "^1.9.2",
+    "@js-omar/prettier-config": "^1.0.3",
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "9.0.7",
     "@nrwl/cli": "14.5.1",
