refactor(eslint): use shared eslint configuration

--- a/package.json
+++ b/package.json
@@ -29,21 +29,21 @@
     "url": "https://ng-omar.com"
   },
   "scripts": {
-    "ng": "nx",
-    "prepare": "husky install",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
-    "start": "npx nx run-many --target=serve --all --parallel=false",
     "build": "npx nx run-many --target=build --all --parallel=false",
     "cap:add": "cross-env project=$npm_config_project npx cap add",
-    "cap:sync": "cross-env project=$npm_config_project npx cap sync",
     "cap:open": "cross-env project=$npm_config_project npx cap open",
-    "check:e2e": "npx nx run-many --target=e2e --all --parallel=false",
-    "check:lint": "npx nx workspace-lint && npx nx run-many --target=lint --all",
-    "check:test": "npx nx run-many --target=test --all",
+    "cap:sync": "cross-env project=$npm_config_project npx cap sync",
+    "check:all": "npm-run-all check:test check:e2e check:lint build check:cspell check:format check:style",
     "check:cspell": "npx cspell --no-progress --show-suggestions --show-context",
+    "check:e2e": "npx nx run-many --target=e2e --all --parallel=false",
     "check:format": "npx prettier . --check",
+    "check:lint": "npx nx workspace-lint && npx nx run-many --target=lint --all",
     "check:style": "npx stylelint \"{apps,libs}/**/*.{css,less,sass,scss,sss}\"",
-    "check:all": "npm-run-all check:test check:e2e check:lint build check:cspell check:format check:style"
+    "check:test": "npx nx run-many --target=test --all",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
+    "ng": "nx",
+    "prepare": "husky install",
+    "start": "npx nx run-many --target=serve --all --parallel=false"
   },
   "prettier": "@js-omar/prettier-config",
   "dependencies": {
@@ -92,7 +92,7 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@ionic/angular-toolkit": "^7.0.0",
-    "@js-omar/eslint-config": "^1.9.2",
+    "@js-omar/eslint-config": "^1.11.0",
     "@js-omar/prettier-config": "^1.0.3",
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "9.0.7",
@@ -119,25 +119,18 @@
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "autoprefixer": "^10.4.8",
-    "cspell": "^6.5.0",
     "cypress": "^10.3.1",
     "eslint": "^8.20.0",
-    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-sonarjs": "^0.14.0",
     "husky": "^8.0.1",
     "jest": "27.5.1",
     "jest-preset-angular": "~11.1.2",
-    "lint-staged": "^13.0.3",
-    "npm-run-all": "^4.1.5",
     "nx": "14.5.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "sort-package-json": "^1.57.0",
     "storybook-addon-angular-router": "^1.6.0",
     "stylelint": "^14.9.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
