--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,11 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
-  "plugins": ["@nrwl/nx", "sonarjs"],
+  "plugins": ["@nrwl/nx"],
   "overrides": [
     {
-      "files": ["*.html"],
-      "extends": ["plugin:prettier/recommended", "eslint:recommended"]
-    },
-    {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "extends": [
-        "eslint:recommended",
-        "airbnb-base",
-        "plugin:sonarjs/recommended",
-        "plugin:prettier/recommended"
-      ],
+      "extends": ["@js-omar/eslint-config/.eslintrc.base.js"],
       "rules": {
         "@nrwl/nx/enforce-module-boundaries": [
           "error",
@@ -25,52 +16,25 @@
               { "sourceTag": "*", "onlyDependOnLibsWithTags": ["*"] }
             ]
           }
-        ],
-        "no-undef": "off",
-        "comma-dangle": "off",
-        "space-in-parens": ["error"],
-        "import/extensions": "off",
-        "import/no-unresolved": "off",
-        "import/prefer-default-export": "off",
-        "import/no-extraneous-dependencies": "off",
-        "no-plusplus": "off",
-        "no-continue": "off",
-        "no-await-in-loop": "off",
-        "no-useless-constructor": "off",
-        "no-return-assign": "off",
-        "class-methods-use-this": "off",
-        "no-unused-vars": ["error"],
-        "no-param-reassign": "off",
-        "no-shadow": "off",
-        "no-return-await": "off",
-        "no-underscore-dangle": "off",
-        "dot-notation": "off"
+        ]
       }
     },
     {
       "files": ["*.ts", "*.tsx"],
       "extends": [
         "plugin:@nrwl/nx/typescript",
-        "plugin:@typescript-eslint/recommended"
+        "@js-omar/eslint-config/.eslintrc.typescript.js"
       ],
-      "plugins": ["@typescript-eslint"],
-      "rules": {
-        "@typescript-eslint/member-ordering": ["error"],
-        "@typescript-eslint/explicit-member-accessibility": ["error"],
-        "@typescript-eslint/explicit-function-return-type": [
-          "error",
-          { "allowExpressions": true }
-        ],
-        "@typescript-eslint/no-empty-interface": "off",
-        "@typescript-eslint/no-unused-vars": ["error"],
-        "@typescript-eslint/no-shadow": ["error"],
-        "@typescript-eslint/no-non-null-assertion": "off"
-      }
+      "rules": {}
     },
     {
       "files": ["*.js", "*.jsx"],
       "extends": ["plugin:@nrwl/nx/javascript"],
       "rules": {}
+    },
+    {
+      "files": ["*.{component,modal,page}.ts"],
+      "extends": ["@js-omar/eslint-config/.eslintrc.angular.js"]
     }
   ]
 }
