--- a/package.json
+++ b/package.json
@@ -92,8 +92,9 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@ionic/angular-toolkit": "^7.0.0",
-    "@js-omar/eslint-config": "^1.11.0",
+    "@js-omar/eslint-config": "^1.12.1",
     "@js-omar/prettier-config": "^1.0.3",
+    "@js-omar/stylelint-config": "^1.0.2",
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "9.0.7",
     "@nrwl/cli": "14.5.1",
@@ -129,16 +130,9 @@
     "jest": "27.5.1",
     "jest-preset-angular": "~11.1.2",
     "nx": "14.5.1",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.20",
     "prettier": "^2.7.1",
     "storybook-addon-angular-router": "^1.6.0",
-    "stylelint": "^14.9.1",
-    "stylelint-config-idiomatic-order": "^8.1.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-sass-guidelines": "^9.0.1",
-    "stylelint-config-standard": "^26.0.0",
-    "stylelint-config-standard-scss": "^5.0.0",
     "tailwindcss": "^3.1.7",
     "tailwindcss-rtl": "^0.9.0",
     "ts-jest": "27.1.4",
