--- a/apps/w-admin/project.json
+++ b/apps/w-admin/project.json
@@ -34,11 +34,11 @@
           "fileReplacements": [
             {
               "replace": "apps/w-admin/src/environments/environment.ts",
-              "with": "apps/w-admin/src/environments/environment.prod.ts"
+              "with": "apps/w-admin/src/environments/environment.production.ts"
             },
             {
-              "replace": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.ts",
-              "with": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.prod.ts"
+              "replace": "libs/shared/constants/src/lib/common-workspace-environment/common-workspace-environment.ts",
+              "with": "libs/shared/constants/src/lib/common-workspace-environment/common-workspace-environment.production.ts"
             }
           ],
           "outputHashing": "all"
@@ -62,8 +62,8 @@
               "with": "apps/w-admin/src/environments/environment.staging.ts"
             },
             {
-              "replace": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.ts",
-              "with": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.staging.ts"
+              "replace": "libs/shared/constants/src/lib/common-workspace-environment/common-workspace-environment.ts",
+              "with": "libs/shared/constants/src/lib/common-workspace-environment/common-workspace-environment.staging.ts"
             }
           ],
           "outputHashing": "all"
