--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "check:cspell": "npx cspell --no-progress --show-suggestions --show-context",
     "check:e2e": "npx nx run-many --target=e2e --all --parallel=false",
     "check:format": "npx prettier . --check",
-    "check:lint": "npx nx workspace-lint && npx nx run-many --target=lint --all",
+    "check:lint": "npx eslint . && npx nx workspace-lint && npx nx run-many --target=lint --all",
     "check:style": "npx stylelint \"{apps,libs}/**/*.{css,less,sass,scss,sss}\"",
     "check:test": "npx nx run-many --target=test --all",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
@@ -89,10 +89,8 @@
     "@angular/compiler-cli": "~14.1.0",
     "@angular/language-service": "~14.1.0",
     "@capacitor/cli": "4.0.1",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
     "@ionic/angular-toolkit": "^7.0.0",
-    "@js-omar/eslint-config": "^1.12.1",
+    "@js-omar/eslint-config": "^1.16.0",
     "@js-omar/prettier-config": "^1.0.3",
     "@js-omar/stylelint-config": "^1.0.2",
     "@nestjs/schematics": "9.0.1",
@@ -124,9 +122,6 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
     "jest": "27.5.1",
     "jest-preset-angular": "~11.1.2",
     "nx": "14.5.1",
